--- a/styleMassage.css
+++ b/styleMassage.css
@@ -6,5 +6,8 @@
 
 .waterfallImage {
 	border-radius: 8px;
-  position: center;
+  	position: center;
+	height: 100px;
+	max-width: 500px;
+	border: 3px solid #73AD21;
 }
