--- a/styleMassage.css
+++ b/styleMassage.css
@@ -7,7 +7,7 @@
 .waterfallImage {
 	border-radius: 8px;
   	position: center;
-	height: 1000px;
-	/*max-width: 800px;*/
+	height: 600px;
+	max-width: 800px;
 	border: 3px solid #73AD21;
 }
