use url for image instead of saved file

--- a/css/thank-you-image.css
+++ b/css/thank-you-image.css
@@ -1,4 +1,4 @@
 body {
-	background-image: "images/ThankYou.jpg";
-	color: red;
+	background-image: url("http://i.huffpost.com/gen/1408370/thumbs/o-MAUI-SEA-TURTLE-570.jpg?1");
+	color: blue;
 }
