center thank you text

--- a/css/thank-you-image.css
+++ b/css/thank-you-image.css
@@ -1,4 +1,5 @@
 body {
 	background-image: url("http://i.huffpost.com/gen/1408370/thumbs/o-MAUI-SEA-TURTLE-570.jpg?1");
-	color: blue;
+	color: black;
+	font-size: 200%;
 }
