Use a larger image

--- a/css/thank-you-image.css
+++ b/css/thank-you-image.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("http://i.huffpost.com/gen/1408370/thumbs/o-MAUI-SEA-TURTLE-570.jpg?1");
+	background-image: url("http://intelligenttravel.nationalgeographic.com/files/2012/11/Maui_Michael_Filippoff_243959.jpg");
 	color: black;
 	font-size: 200%;
 }
