resize background image to fit screen

--- a/css/thank-you-image.css
+++ b/css/thank-you-image.css
@@ -1,5 +1,8 @@
 body {
 	background-image: url("http://intelligenttravel.nationalgeographic.com/files/2012/11/Maui_Michael_Filippoff_243959.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
 	color: black;
 	font-size: 200%;
 }
